# swarm_uav_config

./: .gitignore  .gitmodules  README.md  config_v1.11
ROS2_cross_compile/: cross_compilation.md  install_tutorial.md  packages_cross_compilation.md
ROS2_cross_compile/docker/armhf_env/: Dockerfile  build.bash
ROS2_cross_compile/docker/humble_cc_env/: Dockerfile  build.bash
ROS2_cross_compile/workspace_cc/: cross_compile_ws.bash  docker_cc.bash
drone_setup_docs/: companion_board.md  compile_v1.13.md  compile_v1.14.md  config_v1.13.md  config_v1.14.md  omnibus_f4sd_links.px4
drone_setup_docs/sd_backup/: dataman  parameters_backup.bson
drone_setup_docs/sd_backup/etc/: extras.txt
gazebo_classic_example/src/listener_test/: CMakeLists.txt  package.xml
gz_groundtruth/: PX4_external_odom_gz_garden.md  README.md  README_garden.md  README_old.md
gz_groundtruth/motion_capture/: setup.cfg
gz_groundtruth/motion_capture/motion_capture/: mocap_node.py
gz_groundtruth/src/motion_capture/: package.xml  setup.py
gz_groundtruth/src/px4-offboard/: package.xml  setup.py
gz_groundtruth/src/px4_offboard/: setup.py
logs_drone_vero/: 030423_1451_v114b_working.ulg  030423_1514_b114b_working.ulg  030423_1515_b114b_working.ulg  030423_1531_b114b_working.ulg  12092023_volo_offboard1.ulg  12092023_volo_offboard2.ulg  300323_1135_v114b_not_working.ulg  300523_11.30_v114b_crashed.ulg  March16_1430.ulg  March16_1605_unstable.ulg  March16_1615.ulg  March211705_v1133_stable.ulg
logs_drone_vero/Logs volo drone + recording vicon_1/: tesi_drone_test.csv  tesi_drone_test.system  tesi_drone_test.xcp  volo_drone_with_recording_vicon.ulg
logs_drone_vero/Logs volo drone + recording vicon_2/: drone_tesi_prova.csv  drone_tesi_prova.system  drone_tesi_prova.xcp  volo_drone_with_recording_vicon_2.ulg
logs_drone_vero/con_vicon/: log100 (1).ulg  log100 (2).ulg  log100 (4).ulg  log101 (1).ulg  log101.ulg
offboard_ws/: README.md
offboard_ws/src/cpp_swarm/: CMakeLists.txt  package.xml
offboard_ws/src/cpp_swarm/src/: cpp_uav.cpp  cpp_uav.py  offline_stc_v2.cpp
offboard_ws/src/px4_offboard/: README.md  package.xml  setup.py
offboard_ws/workspace_cc/: toolchain.cmake
openMV_cam/: main.py
px4_offboard/: README.md  setup.py
px4_offboard/px4_offboard/: offboard_control.py  offboard_custom.py
vicon/: vicon.py  vicon_docs.md
vicon/rosbag/rosbag2_2023_06_09-15_19_54/: metadata.yaml  rosbag2_2023_06_09-15_19_54_0.db3
vicon/rosbag/rosbag2_2023_06_09-15_25_12/: metadata.yaml  ros2_output.mcap  rosbag2_2023_06_09-15_25_12_0.db3
vicon/rosbag/rosbag2_2023_06_09-15_57_39/: metadata.yaml  output.mcap  rosbag2_2023_06_09-15_57_39_0.db3
vicon/rosbag/rosbag2_2023_06_09-16_26_23/: metadata.yaml  outuput.mcap  (+1 more)
vicon/src/vicon_ros2_cpp/: CMakeLists.txt  package.xml
vicon/src/vicon_ros2_cpp/include/: DataStreamClient.h  DataStreamRetimingClient.h  IDataStreamClientBase.h  ViconDataStreamSDK_CPPRetimerTest  ViconDataStreamSDK_CPPRetimerTest.cpp  ViconDataStreamSDK_CPPTest  ViconDataStreamSDK_CPPTest.cpp  ViconDataStreamSDK_CRetimerTest  ViconDataStreamSDK_CTest  libboost_context.so.1.68.0  libboost_date_time.so.1.68.0  libboost_locale.so.1.68.0  libboost_log_setup.so.1.68.0  libboost_math_c99.so.1.68.0  libboost_math_c99l.so.1.68.0  libboost_prg_exec_monitor.so.1.68.0  libboost_random.so.1.68.0  libboost_signals.so.1.68.0  libboost_system.so.1.68.0  libboost_thread.so.1.68.0  libboost_unit_test_framework.so.1.68.0  libboost_wave.so.1.68.0
vicon/src/vicon_ros2_cpp/launch/: vicon.launch.py
vicon/src/vicon_ros2_cpp/src/: vicon.cpp  viconv2.cpp
(+52 files in other folders)
